[project]
name = "whatsapp"
version = "0.1.0"
description = "WhatsApp integration for doover to allow configurable alerts, configurable messages based on configurable thresholds from tag values"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=0.4.13",
]

[project.scripts]
export-config = "whatsapp.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
